@@ -26,6 +26,7 @@ Job: "ttHbbNTuples"
 Fit: "FullFit"
   FitType: SPLUSB
   FitRegion: CRSR
+  doLHscan: all
 
 
 % --------------- %
